@@ -6,6 +6,7 @@ Version: 1.2 (WIP)
 ==================
 - Condor 1.1.0 registry variables support added
 - LK8000 1.20 support aded (task files format updated)
+- Support for A types waypoint in a task removed (safety altitude was always taken into account)
 
 Version: 1.1
 ============
